# realtime-crime-reporting

./: .env  .env.example  .gitignore  LICENSE.txt  README.md  docker-compose.yml
api/: Dockerfile  README.md  README.rst  pyproject.toml
api/api/: constants.py  dependency.py  main.py  models.py
app/: .env.example  App.tsx  Layout.tsx  app.config.js  package.json
app/hooks/: useAuth.tsx  useReportCrime.tsx
app/screens/: Login.tsx  Root.tsx  SignUp.tsx
app/screens/modals/: Help.tsx
app/screens/tabs/: Feed.tsx  History.tsx  Profile.tsx  ReportCrime.tsx
app/util/: util.ts
auth/: Dockerfile  README.md  README.rst  pyproject.toml
auth/auth/: constants.py  main.py  models.py
auth/tests/: test_auth.py
crime-producer/: Dockerfile  pyproject.toml
crime-producer/crime_producer/: main.py
crime-producer/tests/: test_crime_producer.py
crimes-api/: Dockerfile  pyproject.toml
crimes-api/crimes_api/: constants.py  dependency.py  main.py
crimes-api/tests/: test_crimes_api.py
cronjob/: Dockerfile  pyproject.toml
cronjob/cronjob/: constants.py  main.py
cronjob/tests/: test_cronjob.py
db/: mongo-init.js
mongo-connect/: Dockerfile
nginx/: nginx.conf
ui/: Dockerfile  package.json
ui/src/: App.tsx  index.css  index.tsx
ui/src/components/: Foot.tsx  GoogleButton.tsx  Nav.tsx  NotFound.tsx  SignIn.tsx
ui/src/hooks/: useGoogleAuth.tsx
ui/src/utils/: utils.ts
users-api/: Dockerfile  pyproject.toml
users-api/tests/: test_users_api.py
users-api/users_api/: main.py
