[tool.poetry]
name = "cronjob"
version = "0.1.0"
description = ""
authors = ["ShreyaTalati <talatishreya2@gmail.com>", "harsh8398 <pharsh58@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
schedule = "^1.1.0"
pymongo = "^4.0.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
